[nova] Remove support for manual dsn, check for sentry-operator

--- a/openstack/nova/templates/consoleauth-deployment.yaml
+++ b/openstack/nova/templates/consoleauth-deployment.yaml
@@ -50,16 +50,12 @@ spec:
           value: {{ .Release.Namespace }}
         - name: DEPENDENCY_SERVICE
           value: "nova-api"
-        {{- if .Values.sentry.enabled }}
+        {{- if and .Values.sentry.enabled (.Capabilities.APIVersions.Has "sentry.sap.cc/v1") }}
         - name: SENTRY_DSN
-        {{- if .Values.sentry.dsn }}
-          value: {{ .Values.sentry.dsn | quote}}
-        {{ else }}
           valueFrom:
             secretKeyRef:
               name: sentry
-              key: nova.DSN.python
-        {{- end }}
+              key: {{ .Chart.Name }}.DSN.python
         {{- end }}
 {{- if .Values.python_warnings }}
         - name: PYTHONWARNINGS
