--- a/openstack/nova/templates/api-deployment.yaml
+++ b/openstack/nova/templates/api-deployment.yaml
@@ -61,16 +61,12 @@ spec:
               value: "localhost"
             - name: STATSD_PORT
               value: "9125"
-            {{- if .Values.sentry.enabled }}
+            {{- if and .Values.sentry.enabled (.Capabilities.APIVersions.Has "sentry.sap.cc/v1") }}
             - name: SENTRY_DSN
-            {{- if .Values.sentry.dsn }}
-              value: {{ .Values.sentry.dsn | quote}}
-            {{ else }}
               valueFrom:
                 secretKeyRef:
                   name: sentry
-                  key: nova.DSN.python
-            {{- end }}
+                  key: {{ .Chart.Name }}.DSN.python
             {{- end }}
 {{- if .Values.python_warnings }}
             - name: PYTHONWARNINGS
