Remove check, if sentry-operator is available

--- a/openstack/nova/templates/consoleauth-deployment.yaml
+++ b/openstack/nova/templates/consoleauth-deployment.yaml
@@ -50,7 +50,7 @@ spec:
           value: {{ .Release.Namespace }}
         - name: DEPENDENCY_SERVICE
           value: "nova-api"
-        {{- if and .Values.sentry.enabled (.Capabilities.APIVersions.Has "sentry.sap.cc/v1") }}
+        {{- if .Values.sentry.enabled }}
         - name: SENTRY_DSN
           valueFrom:
             secretKeyRef:
