--- a/openstack/nova/templates/sentry.yaml
+++ b/openstack/nova/templates/sentry.yaml
@@ -1,4 +1,4 @@
-{{- if and .Values.sentry.enabled (.Capabilities.APIVersions.Has "sentry.sap.cc/v1") -}}
+{{- if .Values.sentry.enabled -}}
 apiVersion: "sentry.sap.cc/v1"
 kind: "SentryProject"
 metadata:
