--- a/openstack/ironic/templates/quota-classes-kq.yaml
+++ b/openstack/ironic/templates/quota-classes-kq.yaml
@@ -9,8 +9,11 @@ requirements:
   kind: OpenstackSeed
 context: ironic@Default/service
 python: |
+    from ironicclient import client as bmclient
+    bm = bmclient.get_client(1, session=os.session, os_ironic_api_version='1.46')
+
     resource_classes = set(node.resource_class
-                           for node in os.baremetal.nodes(fields='resource_class')
+                           for node in bm.node.list(fields=['resource_class'])
                            if node.resource_class)
 
     quotas = {'instances_{}'.format(r): 0 for r in resource_classes}
