--- a/openstack/ironic/templates/conductors-kq.yaml
+++ b/openstack/ironic/templates/conductors-kq.yaml
@@ -15,6 +15,9 @@ python: |
     blocks = dict()
 
     def append_item(d, k, v):
+        if k is None or v is None:
+          return
+
         if k not in d:
             d[k] = v
         else:
