--- a/global/prometheus-alertmanager/templates/config.yaml
+++ b/global/prometheus-alertmanager/templates/config.yaml
@@ -99,6 +99,13 @@ data:
         match_re:
           cluster_type: kubernikus-controlplane
 
+      - receiver: pagerduty_network
+        continue: false
+        match_re:
+          tier: net
+          severity: critical
+          region: admin|ap-ae-1|ap-au-1|ap-cn-1|ap-jp-1|ap-jp-2|ap-sa-1|eu-de-1|eu-de-2|eu-nl-1|eu-ru-1|la-br-1|na-ca-1|na-us-1|na-us-3
+
       - receiver: pagerduty_metal
         continue: false
         match_re:
@@ -363,6 +370,24 @@ data:
     - name: pagerduty_metal
       pagerduty_configs:
         - service_key: {{ default "MISSING" .Values.pagerduty.metal.service_key | quote }}
+          description: {{"'{{ template \"pagerduty.sapcc.description\" . }}'"}}
+          component: {{"'{{template \"pagerduty.sapcc.tier\" . }}'"}}
+          group: {{"'{{template \"pagerduty.sapcc.service\" . }}'"}}
+          details:
+            Details: {{"'{{template \"pagerduty.sapcc.details\" . }}'"}}
+            Region: {{"'{{template \"pagerduty.sapcc.region\" . }}'"}}
+            Tier: {{"'{{template \"pagerduty.sapcc.tier\" . }}'"}}
+            Service: {{"'{{template \"pagerduty.sapcc.service\" . }}'"}}
+            Context: {{"'{{template \"pagerduty.sapcc.context\" . }}'"}}
+            Prometheus: {{"'{{template \"pagerduty.sapcc.prometheus\" . }}'"}}
+            Dashboard: {{"'{{template \"pagerduty.sapcc.dashboard\" . }}'"}}
+            Sentry: {{"'{{template \"pagerduty.sapcc.sentry\" . }}'"}}
+            Playbook: {{"'{{template \"pagerduty.sapcc.playbook\" . }}'"}}
+            firing: {{"'{{ template \"pagerduty.sapcc.firing\" . }}'"}}
+
+    - name: pagerduty_network
+      pagerduty_configs:
+        - service_key: {{ default "MISSING" .Values.pagerduty.network.service_key | quote }}
           description: {{"'{{ template \"pagerduty.sapcc.description\" . }}'"}}
           component: {{"'{{template \"pagerduty.sapcc.tier\" . }}'"}}
           group: {{"'{{template \"pagerduty.sapcc.service\" . }}'"}}
