--- a/openstack/vcenter-operator/values.yaml
+++ b/openstack/vcenter-operator/values.yaml
@@ -6,6 +6,7 @@
 global:
   image_namespace: REQUIRED
   imageRegistry: REQUIRED
+  user_suffix: ""
 
 pod:
   replicas:
@@ -17,3 +18,9 @@ pod:
         podReplacementStrategy: Recreate
 
 imageVersion: null
+
+variables:
+  os_username: vcenter_operator
+  os_user_domain_name: Default
+  os_project_name: cloud_admin
+  os_project_domain_name: ccadmin
