--- a/system/kube-monitoring-kubernikus/requirements.yaml
+++ b/system/kube-monitoring-kubernikus/requirements.yaml
@@ -1,7 +1,7 @@
 dependencies:
   - name: prometheus-operator
     repository: https://kubernetes-charts.storage.googleapis.com
-    version: 6.12.1
+    version: 6.14.1
 
   - name: blackbox-exporter
     repository: https://charts.eu-de-2.cloud.sap
@@ -44,5 +44,10 @@ dependencies:
     version: 1.0.5
 
   - name: grafana
-    repository: https://kubernetes-charts.storage.googleapis.com/
-    version: 3.5.4
+    repository: https://kubernetes-charts.storage.googleapis.com
+    version: 3.8.19
+
+  - name: ping-exporter
+    repository: https://charts.eu-de-2.cloud.sap
+    version: 0.1.0
+    condition: ping-exporter.enabled
