--- a/system/kube-monitoring-kubernikus/values.yaml
+++ b/system/kube-monitoring-kubernikus/values.yaml
@@ -3,10 +3,6 @@ global:
   domain:
   clusterType: kubernikus
 
-# Disable prometheus-operator Grafana sub-chart. We deploy independently.
-grafana:
-  enabled: false
-
 # Disable the prometheus-operator kube-state-metrics sub-chart. We deploy independently.
 kubeStateMetrics:
   enabled: false
@@ -104,20 +100,30 @@ prometheus-node-exporter:
 prometheus-server:
   name: kubernikus
 
-  retentionTime: 7d
+  retentionTime: 21d
+
+  additionalScrapeConfigs:
+    name: prometheus-kubernikus-additional-scrape-config
+    key: scrape-config.yaml
+    optional: true
 
   ingress:
     enabled: true
     host: prometheus.kubernikus
 
-  # Store in memory.
   persistence:
     enabled: true
     size: 100Gi
 
   serviceDiscoveries:
+    endpoints:
+      enabled: true
+      # Scrape all targets regardless of their `prometheus.io/targets` annotation.
+      limitToPrometheusTargets: false
     pods:
       enabled: true
+      # Scrape all targets regardless of their `prometheus.io/targets` annotation.
+      limitToPrometheusTargets: false
     kubeAPIServer:
       enabled: true
     cAdvisor:
@@ -129,9 +135,173 @@ prometheus-server:
     kubeDNS:
       enabled: true
 
+  # The tier to use for prometheus-server alerts.
+  alerts:
+    tier: kks
+
   # Send alerts to these alertmanagers.
   alertmanagers:
     - alertmanager.eu-de-1.cloud.sap
 
 prometheus-kubernetes-rules:
   prometheusName: kubernikus
+  tier: kks
+
+eventexporter:
+  rbac:
+    create: true
+
+  metrics:
+    config:
+      config.yaml: |-
+        metrics:
+        - name: volume_mount_error_total
+          event_matcher:
+          - key: InvolvedObject.Kind
+            expr: Pod
+          - key: Reason
+            expr: (FailedAttachVolume|FailedMount)
+          - key: Type
+            expr: Warning
+          - key: Source.Component
+            expr: attachdetach.*
+          labels:
+            node: Object.Spec.NodeName
+        - name: volume_mount_success_total
+          event_matcher:
+          - key: InvolvedObject.Kind
+            expr: Pod
+          - key: Message
+            expr: MountVolume.SetUp succeeded for volume .pvc-.*
+          - key: Reason
+            expr: SuccessfulMountVolume
+          labels:
+            node: Source.Host
+        - name: volume_multi_attach_error_total
+          event_matcher:
+          - key: InvolvedObject.Kind
+            expr: Pod
+          - key: Message
+            expr: Multi-Attach error for volume.*
+          - key: Reason
+            expr: FailedAttachVolume
+          labels:
+            node: InvolvedObject.Name
+        - name: volume_mount_bad_request_total
+          event_matcher:
+          - key: InvolvedObject.Kind
+            expr: Pod
+          - key: Reason
+            expr: (FailedAttachVolume|FailedMount)
+          - key: Type
+            expr: Warning
+          - key: Source.Component
+            expr: attachdetach.*
+          - key: Message
+            expr: ".*failed to attach ([-0-9a-f]+) volume to.*compute: Invalid request due to incorrect syntax or missing required parameters."
+          labels:
+            volume: Message[1]
+
+grafana:
+  enabled: false
+  admin:
+    existingSecret: kubernikus-monitoring-grafana-admin
+    userKey: adminUser
+    passwordKey: adminPassword
+    # Defined via secrets.
+    # username: admin-user
+    # password: admin-password
+
+  rbac:
+    pspEnabled: false
+
+  # Ingress disabled by default as hosts and tls are set via secrets.
+  ingress:
+    enabled: false
+    annotations:
+      vice-president: "true"
+      prometheus.io/probe: "true"
+      nginx.ingress.kubernetes.io/configuration-snippet: |
+        rewrite ^/$ /dashboard/db/kubernikus?refresh=1m&orgId=1&kiosk=true redirect;
+      nginx.ingress.kubernetes.io/auth-tls-secret: "kubernikus-system/ca-crt"
+      nginx.ingress.kubernetes.io/auth-tls-verify-depth: "3"
+      nginx.ingress.kubernetes.io/auth-tls-verify-client: "optional"
+
+    # Defined via secrets.
+    # hosts:
+    #   - grafana.domain.tld
+    #
+    # tls:
+    #  - secretName: tls-grafana-domain-tld
+    #    hosts:
+    #      - grafana.domain.tld
+
+  plugins: grafana-piechart-panel,natel-discrete-panel,grafana-worldmap-panel
+
+  # Sidecar for discovering & reloading dashboard, datasource configmaps.
+  sidecar:
+    dashboards:
+      enabled: true
+      # Label that configmaps with dashboards should have to be added.
+      label: kubernikus-grafana-dashboard
+      # Only search for dashboards in the specified namespace.
+      searchNamespace: kubernikus-system
+
+    datasources:
+      enabled: true
+      # Label that configmaps with datasources should have to be added.
+      label: kubernikus-grafana-datasource
+      # Only search for dashboards in the specified namespace.
+      searchNamespace: kubernikus-system
+
+  grafana.ini:
+    paths:
+      data: /var/lib/grafana/data
+      logs: /var/log/grafana
+      plugins: /var/lib/grafana/plugins
+      provisioning: /var/lib/grafana/provisioning
+
+    server:
+      protocol: http
+      http_addr:
+      http_port: 3000
+      domain: localhost
+      enforce_domain: false
+      root_url: "%(protocol)s://%(domain)s:%(http_port)s"
+      router_logging: false
+      static_root_path: public
+      enable_gzip: false
+      cert_file:
+      cert_key:
+      socket: /tmp/grafana.sock
+
+    users:
+      allow_sign_up: false
+      allow_org_create: false
+      auto_assign_org: true
+      auto_assign_org_role: Admin
+      default_theme: dark
+
+    auth.anonymous:
+      enabled: true
+      org_name: Main Org.
+      org_role: Admin
+
+    auth.proxy:
+      enabled: true
+      header_name: X-REMOTE-USER
+      header_property: username
+      auto_sign_up: true
+
+    auth.basic:
+      enabled: false
+
+    smtp:
+      enabled: false
+
+    log:
+      mode: console
+      level: debug
+
+    alerting:
+      enabled: false
